# end-to-end

./: docker-compose.yaml  pyproject.toml
end_to_end_python/: Dockerfile  ingest_data.py  text.md  tweets.csv
tests/: test_end_to_end_python.py
