[tool.poetry]
name = "end-to-end-python"
version = "0.1.0"
description = ""
authors = ["Devshy <eduardoshy1@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
snscrape = "^0.4.3"
pandas = "^1.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
